testsuite/good/AttributesWithGetter.flux
type AttributesWithGetter {
   int getX();
}
attributes {
   var int x as getX;
}
