testsuite/bad/GetterMethodNotInInterface.flux
// When generating automatic getter, the method signature must exist in the interface
type GetterMethodNotInInterface {

}
attributes {
   var int x as getX;
}